--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis for DFProfiler\n",
+    "\n",
+    "This is a simple analysis notebook for dfprofiler."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,15 +27,31 @@
     "import dask\n",
     "import os\n",
     "from pathlib import Path\n",
-    "from glob import glob\n",
+    "from glob import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "import dask.dataframe as dd\n",
     "from dask.distributed import Client, LocalCluster, progress, wait, get_client\n",
     "from dask.distributed import Future, get_client"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project Variables"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,10 +59,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup Dask Local Cluster"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "workers=4\n",
+    "cluster = LocalCluster(n_workers=workers)  # Launches a scheduler and workers locally\n",
+    "client = Client(cluster)  # Connect to distributed cluster and override default\n",
+    "logging.info(f\"Initialized Client with {workers} workers and link {client.dashboard_link}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Start Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/cc/dfprofiler/tests/output/simple_test_1MB_1K.pfw']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "file=f\"{app_root}/tests/output/simple_test_1MB_1K.pfw\"\n",
+    "file_pattern = glob(file)\n",
+    "file_pattern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function to load trace data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/cc/dfprofiler/tests/output/simple_test_1MB_1K.pfw']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def load_profile(args):\n",
     "    line, path = args\n",
@@ -53,58 +152,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "workers=4\n",
-    "cluster = LocalCluster(n_workers=workers)  # Launches a scheduler and workers locally\n",
-    "client = Client(cluster)  # Connect to distributed cluster and override default\n",
-    "logging.info(f\"Initialized Client with {workers} workers and link {client.dashboard_link}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/cc/dfprofiler/tests/output/simple_test_1MB_1K.pfw'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "file=f\"{app_root}/tests/output/simple_test_1MB_1K.pfw\"\n",
-    "file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/home/cc/dfprofiler/tests/output/simple_test_1MB_1K.pfw']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file_pattern = glob(file)\n",
-    "file_pattern"
+    "## Create Dask Dataframe"
    ]
   },
   {
@@ -157,6 +208,13 @@
    "source": [
     "events = events.repartition(npartitions=1).persist()\n",
     "_ = wait(events)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
    ]
   },
   {
@@ -1586,10 +1644,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "min_ts, max_ts = dask.compute(events[\"ts\"].min(), events[\"ts\"].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.0)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(max_ts - min_ts) / 1e6"
+   ]
   }
  ],
  "metadata": {
