--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/home/cc/dfprofiler/tests/output/simple_test_1MB_1K.pfw']"
+       "['/home/cc/dfprofiler/tests/output/profile.pfw']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,20 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/home/cc/dfprofiler/tests/output/simple_test_1MB_1K.pfw']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_profile(args):\n",
     "    line, path = args\n",
@@ -160,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +158,7 @@
        "dask.bag<filter-lambda, npartitions=1>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,16 +1642,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(2.0)"
+       "np.float64(33354.0)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,6 +1659,33 @@
    "source": [
     "(max_ts - min_ts) / 1e6"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(1276215)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events.freq.sum().compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
