verifies file metadata.

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-21 22:12:22,279 [DEBUG]: Using selector: EpollSelector in /usr/lib/python3.10/asyncio/selector_events.py:54\n",
-      "2024-07-21 22:12:23,189 [INFO]: Initialized Client with 4 workers and link http://127.0.0.1:8787/status in /tmp/ipykernel_38903/1637310826.py:4\n"
+      "2024-07-22 01:24:21,262 [DEBUG]: Using selector: EpollSelector in /usr/lib/python3.10/asyncio/selector_events.py:54\n",
+      "2024-07-22 01:24:22,164 [INFO]: Initialized Client with 4 workers and link http://127.0.0.1:8787/status in /tmp/ipykernel_44093/1637310826.py:4\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "['/home/cc/dfprofiler/tests/output/simple_test_1MB_128K.pfw.gz']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,24 +222,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-21 22:12:27,369 [INFO]: Created index for 1 files in /tmp/ipykernel_38903/405840175.py:3\n"
+      "2024-07-22 01:24:22,336 [INFO]: Created index for 1 files in /tmp/ipykernel_44093/405840175.py:3\n",
+      "2024-07-22 01:24:22,343 [INFO]: Total size of all files are <dask.bag.core.Item object at 0x7b67f454d870> bytes in /tmp/ipykernel_44093/405840175.py:5\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-21 22:12:27,376 [INFO]: Total size of all files are <dask.bag.core.Item object at 0x79abac26d9f0> bytes in /tmp/ipykernel_38903/405840175.py:5\n",
-      "2024-07-21 22:12:27,448 [INFO]: Max lines per file are [('/home/cc/dfprofiler/tests/output/simple_test_1MB_128K.pfw.gz', 5613)] in /tmp/ipykernel_38903/405840175.py:7\n",
-      "2024-07-21 22:12:27,452 [DEBUG]: Created a batch for /home/cc/dfprofiler/tests/output/simple_test_1MB_128K.pfw.gz from [0, 5612] lines in /tmp/ipykernel_38903/2639451476.py:31\n",
-      "2024-07-21 22:12:27,454 [INFO]: Loading 1 batches out of 1 files and has 5613 lines overall in /tmp/ipykernel_38903/405840175.py:15\n"
+      "2024-07-22 01:24:22,424 [INFO]: Max lines per file are [('/home/cc/dfprofiler/tests/output/simple_test_1MB_128K.pfw.gz', 5613)] in /tmp/ipykernel_44093/405840175.py:7\n",
+      "2024-07-22 01:24:22,426 [DEBUG]: Created a batch for /home/cc/dfprofiler/tests/output/simple_test_1MB_128K.pfw.gz from [0, 5612] lines in /tmp/ipykernel_44093/2639451476.py:31\n",
+      "2024-07-22 01:24:22,429 [INFO]: Loading 1 batches out of 1 files and has 5613 lines overall in /tmp/ipykernel_44093/405840175.py:15\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "4    /sys/devices/system/cpu/cpu17/topology/die_cpus  sys  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
        "[164 rows x 9 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
        "np.float64(31.676917175762355)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,21 +671,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-21 22:14:18,993 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 120dbf3f5e7bbb8c45f687a03d12dae5 initialized by task ('shuffle-transfer-120dbf3f5e7bbb8c45f687a03d12dae5', 0) executed on worker tcp://127.0.0.1:40603\n",
-      "2024-07-21 22:14:19,472 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 120dbf3f5e7bbb8c45f687a03d12dae5 deactivated due to stimulus 'task-finished-1721600059.4681845'\n",
-      "2024-07-21 22:14:29,424 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 151bed4c51c5ae07b6ab256609a1c62b initialized by task ('shuffle-transfer-151bed4c51c5ae07b6ab256609a1c62b', 0) executed on worker tcp://127.0.0.1:40603\n",
-      "2024-07-21 22:14:29,826 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 151bed4c51c5ae07b6ab256609a1c62b deactivated due to stimulus 'task-finished-1721600069.8227923'\n",
-      "2024-07-21 22:14:30,360 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 90f2bb75e12d3fe4c36d65cd047a195b initialized by task ('shuffle-transfer-90f2bb75e12d3fe4c36d65cd047a195b', 0) executed on worker tcp://127.0.0.1:40603\n",
-      "2024-07-21 22:14:30,416 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 90f2bb75e12d3fe4c36d65cd047a195b deactivated due to stimulus 'task-finished-1721600070.4141622'\n",
-      "2024-07-21 22:14:30,756 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 9aaf57d216dd636a5763f8cd14c60e41 initialized by task ('shuffle-transfer-9aaf57d216dd636a5763f8cd14c60e41', 0) executed on worker tcp://127.0.0.1:40603\n",
-      "2024-07-21 22:14:31,178 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 9aaf57d216dd636a5763f8cd14c60e41 deactivated due to stimulus 'task-finished-1721600071.1753156'\n"
+      "2024-07-22 01:24:23,458 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 9400d42321dba2557730a45dee920254 initialized by task ('shuffle-transfer-9400d42321dba2557730a45dee920254', 0) executed on worker tcp://127.0.0.1:40747\n",
+      "2024-07-22 01:24:23,932 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 9400d42321dba2557730a45dee920254 deactivated due to stimulus 'task-finished-1721611463.9289641'\n",
+      "2024-07-22 01:24:24,677 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle a7bbad67b47d71bd4cb36976c19a97a4 initialized by task ('shuffle-transfer-a7bbad67b47d71bd4cb36976c19a97a4', 0) executed on worker tcp://127.0.0.1:40747\n",
+      "2024-07-22 01:24:25,071 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle a7bbad67b47d71bd4cb36976c19a97a4 deactivated due to stimulus 'task-finished-1721611465.0678325'\n",
+      "2024-07-22 01:24:25,193 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 1a5a179e368417d8ea2ef928c4c79562 initialized by task ('shuffle-transfer-1a5a179e368417d8ea2ef928c4c79562', 0) executed on worker tcp://127.0.0.1:40747\n",
+      "2024-07-22 01:24:25,246 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 1a5a179e368417d8ea2ef928c4c79562 deactivated due to stimulus 'task-finished-1721611465.244113'\n",
+      "2024-07-22 01:24:25,366 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 6683756322d2e2bf9a7ae4dfb831bbe8 initialized by task ('shuffle-transfer-6683756322d2e2bf9a7ae4dfb831bbe8', 0) executed on worker tcp://127.0.0.1:40747\n",
+      "2024-07-22 01:24:25,761 - distributed.shuffle._scheduler_plugin - WARNING - Shuffle 6683756322d2e2bf9a7ae4dfb831bbe8 deactivated due to stimulus 'task-finished-1721611465.7567058'\n"
      ]
     },
     {
@@ -705,7 +705,7 @@
        "Name: filename, Length: 1927, dtype: string"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "(1.675211951136589, 35457.0)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
        "5578       vfs  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
        "[1610 rows x 9 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1796,7 +1796,7 @@
        "5530      ext4  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1807,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1864,7 +1864,7 @@
        "Name: func_id, dtype: string"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1888,7 +1888,7 @@
        "Name: func_id, dtype: string"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1913,7 @@
        "Name: func_id, dtype: string"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1924,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2419,7 +2419,7 @@
        "56       vfs                vfs_unlink        1  0.000002"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2432,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2479,7 +2479,7 @@
        "25   c   write  16253  0.100557"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2491,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2538,7 +2538,7 @@
        "30  ext4  ext4_file_write_iter  16231  0.037478"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2550,7 +2550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2597,7 +2597,7 @@
        "36  os_cache  mark_buffer_dirty  4154656  2.143389"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2609,7 +2609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2656,7 +2656,7 @@
        "21   c    read  19198  1.634286"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2668,7 +2668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2709,7 +2709,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2721,7 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2768,7 +2768,7 @@
        "37  os_cache  mark_page_accessed     1  0.000001"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2780,7 +2780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2789,24 +2789,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Application Time 27.0\n"
+      "Application Time 27.0 seconds\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Application Time {(max_ts - min_ts) / 1e6}\")"
+    "print(f\"Application Time {(max_ts - min_ts) / 1e6} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2815,7 +2815,7 @@
        "np.int64(21039362)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2827,7 +2827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2836,7 +2836,7 @@
        "np.int64(55236)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2848,7 +2848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2856,6 +2856,17 @@
      "output_type": "stream",
      "text": [
       "Events captured per system call 380.89944963429645\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
