adding latest changes

--- a/analysis/relevant_functions.ipynb
+++ b/analysis/relevant_functions.ipynb
@@ -96,7 +96,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-10 12:37:37,089 [INFO]: Initialized Client with 16 workers and link http://127.0.0.1:8787/status in /var/tmp/haridev/ipykernel_359281/3142773904.py:4\n"
+      "/usr/workspace/haridev/datacrumbs/venv/lib/python3.9/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 40871 instead\n",
+      "  warnings.warn(\n",
+      "2024-11-25 09:32:33,122 [INFO]: Initialized Client with 16 workers and link http://127.0.0.1:40871/status in /var/tmp/haridev/ipykernel_3687943/3142773904.py:4\n"
      ]
     }
    ],
